[gd_scene load_steps=9 format=3 uid="uid://db7yhisdn87yc"]

[ext_resource type="Script" path="res://scripts/cardinal.gd" id="1_853bj"]
[ext_resource type="Texture2D" uid="uid://djk51a05nwheg" path="res://assets/sprites/birds/birds.png" id="2_yg5xt"]
[ext_resource type="AudioStream" uid="uid://t2njp5kclxok" path="res://assets/audio/cardinal.wav" id="3_hq2gu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oqddd"]
atlas = ExtResource("2_yg5xt")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a62fs"]
atlas = ExtResource("2_yg5xt")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6n4q2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqddd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a62fs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_c7uie"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_fasot"]
radius = 77.0

[node name="Cardinal" type="Area2D"]
z_index = 3
collision_layer = 4
collision_mask = 2
script = ExtResource("1_853bj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6n4q2")
autoplay = "default"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c7uie")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-14, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(14, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hq2gu")
volume_db = 4.245

[node name="OuterArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterArea"]
shape = SubResource("CircleShape2D_fasot")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="OuterArea" to="." method="_on_outer_area_area_entered"]
[connection signal="area_entered" from="OuterArea" to="OuterArea" method="_on_area_entered"]
[connection signal="body_entered" from="OuterArea" to="." method="_on_outer_area_body_entered"]
[connection signal="body_entered" from="OuterArea" to="OuterArea" method="_on_body_entered"]
[connection signal="body_exited" from="OuterArea" to="." method="_on_outer_area_body_exited"]
[connection signal="body_exited" from="OuterArea" to="OuterArea" method="_on_body_exited"]
